--- a/index.html
+++ b/index.html
@@ -1,46 +1,140 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackmind.in - Watch free online movies</title>
-    <link rel="stylesheet" type="text/css" href="little_women.css">
-</head>
-<body> 
-    <nav>
-        <ul class="navigation">
-                    <li>
-                        <h1 class="name">BLACKMIND</h1>
-                    </li>
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Series</a>
-                    </li>
-                    <li>
-                        <a href="#">Drama</a>
-                    </li> 
-                    <li>
-                        <a href="#">Movies</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                    <li class="search_bar">
-                        <input type="text" id="search input" placeholder="search for...">
-                        <button id="search button">search</button>
-                    </li>
-            </nav>
-        </div>
-        </ul>
-        </header>
-    <h2 class="text">Name: Little Women</h2>
-    <p>watch "little women" in online</p>
-      
-     <video class="play" controls>
-        <source src="EP.1.little women.mp4" type="video/mp4">
-     </video>
+<!-- Website - www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
+    <title>My portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Fontawesome CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
     
-</body>
+    <!-- Move to up button -->
+    <div class="scroll-button">
+      <a href="#home"><i class="fas fa-arrow-up"></i></a>
+    </div>
+    <!-- navgaition menu -->
+    <nav>
+      <div class="navbar">
+        <div class="logo"><a href="#">Blackmind</a></div>
+        <ul class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="media-icons">
+          <a href="https://www.linkedin.com/in/srabani-pal-77192a222?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="https://www.instagram.com/crasy_digital?igsh==MTJ5M2w2MDZpNzEzbA=="><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+      <div class="menu-btn">
+        <i class="fas fa-bars"></i>
+      </div>
+    </nav>
+    <!-- Home Section Start -->
+    <section class="home" id="home">
+      <div class="home-content">
+        <div class="text">
+          <div class="text-one">Hello,</div>
+          <div class="text-two">I'm Srabani Pal</div>
+          <div class="text-three">Passionate about UI/UX Designer and Front-End developer</div>
+          <div class="text-four">From India<div> 
+        </div>
+        </div>
+    </section>
+    <!-- About Section Start -->
+    <section class="about" id="about">
+      <div class="content">
+        <div class="title"><span>About Me</span></div>
+        <div class="about-details">
+          <div class="left">
+            <img src="img.jpg" alt="" />
+            <img src="8.jpg" alt="" />
+            <p>Yeah! I'm a anime fan</p>
+            <img src="11.jpg" alt="" />
+            <img src="bg1.jpg" alt="" />
+          </div>
+          <div class="right">
+            <div class="topic">Hey! I'm a avg CSE student</div>
+            <p>
+                Always motivated to create new ideas with a strong foundation of web application. Interested in Web designing, graphics designing, 3D Model creation and many more things. Adept at designing and implementing scalable, efficient, and user- friendly application.<br><br>Lastly!! you're right~ Seeking for a job and hands on project experience in an industrial or organization career.</p>
+            <div class="button">
+              <button onclick="window.open('RESUME.pdf')">Download Resume</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="skills" id="skills">
+      <div class="content">
+        <div class="title"><span>My Skills</span></div>
+        <div class="skills-details">
+          <div class="text">
+            <div class="topic">Skills and abilities</div>
+            <p> o	Language: HTML, CSS, JAVA Script, Python, C.<br>
+                o	Databases: MySQL, MongoDB.<br>
+                o	Tools: Visual Studio Code, PyCharm, Cisco Packet Tracer.<br>
+                o	Figma, WordPress, Wireframe, Creative UI-UX designing.<br>
+                o	Analytical and problem-solving abilities.<br>
+                o	Effective communication and teamwork.<br>
+            </p>
+          </div>
+          <div class="boxes">
+            <div class="box">
+              <div class="topic">HTML</div>
+              <div class="per">90%</div>
+            </div>
+            <div class="box">
+              <div class="topic">CSS</div>
+              <div class="per">90%</div>
+            </div>
+            <div class="box">
+              <div class="topic">JavScript</div>
+              <div class="per">75%</div>
+            </div>
+            <div class="box">
+              <div class="topic">C</div>
+              <div class="per">85%</div>
+            </div>
+            <div id="p"> 
+            <p>Mosted used languages in my 3 years journey -----> </p><br>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- My Services Section Start --
+    <section class="services" id="services">
+      <div class="content">
+        <div class="title"><span>My Personal Projects</span></div>
+        <div class="boxes">
+          <div class="box">
+            <div class="icon">
+              <i class="fas fa-desktop"></i>
+            </div>
+            <div class="topic">SIQUL: Development of an E-learning website.
+              </div>
+            <p>Led the development of a comprehensive E-learning platform aimed at providing notes of Computer Science and Engineering for users.</p><br>
+            <b><button id="m" onclick="window.location.href='https://srabani-01.github.io/';">Visit</button></b>
+          </div>
+          <div class="box">
+            <div class="icon">
+              <i class="fas fa-paint-brur qt"></i>
+            </div>
+            <div class="topic">UI Design of a restaurant using Figma.</div>
+            <p>This includes the restaurant's website and mobile application, designed to enhance the user experience, facilitate easy navigation, and promote the restaurant's brand identity.</p>
+      </div>
+    </section>  -->
+
+    <!-- Footer Section Start -->
+    <footer>
+      <div class="text">
+        <span>&#169; 2024 Blackmind - All Rights Reserved</span><br>
+      </div>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
