--- a/index.html
+++ b/index.html
@@ -1,140 +1,194 @@
 <!DOCTYPE html>
-<!-- Website - www.codingnepalweb.com -->
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>My portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <!-- Fontawesome CDN Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    
-    <!-- Move to up button -->
-    <div class="scroll-button">
-      <a href="#home"><i class="fas fa-arrow-up"></i></a>
-    </div>
-    <!-- navgaition menu -->
-    <nav>
-      <div class="navbar">
-        <div class="logo"><a href="#">Blackmind</a></div>
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <div class="media-icons">
-          <a href="https://www.linkedin.com/in/srabani-pal-77192a222?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="https://www.instagram.com/crasy_digital?igsh==MTJ5M2w2MDZpNzEzbA=="><i class="fab fa-instagram"></i></a>
-        </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Srabani Pal – Portfolio</title>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      --clr-bg: #f9fafb;
+      --clr-primary: #2c3e50;
+      --clr-accent: #3b82f6;
+      --clr-light: #ffffff;
+      --clr-muted: #6b7280;
+    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--clr-bg);
+      color: var(--clr-primary);
+      line-height: 1.6;
+    }
+    a { color: inherit; text-decoration: none; }
+    img { max-width: 100%; display: block; }
+
+    /* ───── Navigation ───── */
+    header {
+      position: sticky; top: 0; z-index: 999;
+      background: var(--clr-light);
+      box-shadow: 0 1px 4px rgba(0,0,0,.06);
+    }
+    .nav {
+      max-width: 1100px; margin: 0 auto; padding: 1rem 1.25rem;
+      display: flex; align-items: center; justify-content: space-between;
+    }
+    .nav_logo { font-weight: 600; font-size: 1.25rem; }
+    .nav_links { display: flex; gap: 1.5rem; }
+    .nav_links a { position: relative; padding-bottom: .2rem; }
+    .nav_links a::after {
+      content: ""; position: absolute; left: 0; bottom: 0;
+      width: 0; height: 2px; background: var(--clr-accent);
+      transition: width .3s ease;
+    }
+    .nav_links a:hover::after { width: 100%; }
+
+    /* Mobile menu */
+    .hamburger { display: none; cursor: pointer; flex-direction: column; gap: 4px; }
+    .hamburger span { width: 24px; height: 2px; background: var(--clr-primary); transition: .3s; }
+    @media (max-width: 768px) {
+      .nav_links { position: fixed; inset: 0; top: 64px; flex-direction: column; background: var(--clr-light);
+                   padding: 2rem; transform: translateX(100%); transition: transform .3s ease; }
+      .nav_links.show { transform: translateX(0); }
+      .hamburger { display: flex; }
+    }
+
+    /* ───── Hero ───── */
+    .hero { display: grid; place-items: center; min-height: 80vh; text-align: center; padding: 2rem 1.25rem; }
+    .hero h1 { font-size: clamp(2rem,5vw,3rem); margin-bottom: .5rem; }
+    .hero p { max-width: 540px; margin-inline: auto; color: var(--clr-muted); }
+    .btn {
+      display: inline-block; margin-top: 1.5rem; padding: .75rem 1.5rem; border-radius: 8px;
+      background: var(--clr-accent); color: var(--clr-light); font-weight: 500;
+      transition: background .3s;
+    }
+    .btn:hover { background: #2563eb; }
+
+    /* ───── Sections ───── */
+    section { padding: 4rem 1.25rem; }
+    .section_title { text-align: center; font-size: 1.75rem; font-weight: 600; margin-bottom: 3rem; }
+    .container { max-width: 1100px; margin-inline: auto; }
+
+    /* About */
+    .about_grid { display: grid; gap: 2rem; align-items: center; }
+    @media (min-width: 768px) { .about_grid { grid-template-columns: 1fr 1fr; } }
+    .about_grid img { border-radius: 12px; box-shadow: 0 4px 14px rgba(0,0,0,.08); }
+
+    /* Projects */
+    .projects_grid { display: grid; gap: 2rem; }
+    @media (min-width: 700px) { .projects_grid { grid-template-columns: repeat(2,1fr); } }
+    @media (min-width: 1024px) { .projects_grid { grid-template-columns: repeat(3,1fr); } }
+    .project_card { background: var(--clr-light); border-radius: 12px; overflow: hidden;
+                    box-shadow: 0 4px 16px rgba(0,0,0,.05); transition: transform .3s; }
+    .project_card:hover { transform: translateY(-6px); }
+    .project_card img { height: 180px; width: 100%; object-fit: cover; }
+    .project_content { padding: 1rem; }
+    .project_title { font-weight: 600; margin-bottom: .25rem; }
+    .project_link { font-size: .875rem; color: var(--clr-accent); }
+
+    /* Contact */
+    .contact_grid { display: grid; gap: 2rem; }
+    .contact_item { background: var(--clr-light); padding: 1.5rem; border-radius: 12px;
+                    display: flex; gap: 1rem; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,.05); }
+    .contact_item i { font-size: 1.5rem; color: var(--clr-accent); }
+
+    /* Footer */
+    footer { text-align: center; padding: 2rem 1.25rem; color: var(--clr-muted); font-size: .9rem; }
+  </style>
+  <script defer>
+    // mobile nav toggle
+    document.addEventListener('DOMContentLoaded',()=>{
+      const burger=document.querySelector('.hamburger');
+      const links=document.querySelector('.nav_links');
+      burger?.addEventListener('click',()=>{
+        links.classList.toggle('show');
+        burger.classList.toggle('open');
+      });
+    });
+  </script>
+  <script src="https://kit.fontawesome.com/1e7e4be819.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <!-- =========  Navbar  ========= -->
+  <header>
+    <nav class="nav">
+      <a class="nav_logo" href="#home">Srabani Pal</a>
+      <div class="hamburger" aria-label="Toggle menu" aria-expanded="false">
+        <span></span><span></span><span></span>
       </div>
-      <div class="menu-btn">
-        <i class="fas fa-bars"></i>
+      <div class="nav_links">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
       </div>
     </nav>
-    <!-- Home Section Start -->
-    <section class="home" id="home">
-      <div class="home-content">
-        <div class="text">
-          <div class="text-one">Hello,</div>
-          <div class="text-two">I'm Srabani Pal</div>
-          <div class="text-three">Passionate about UI/UX Designer and Front-End developer</div>
-          <div class="text-four">From India<div> 
-        </div>
-        </div>
-    </section>
-    <!-- About Section Start -->
-    <section class="about" id="about">
-      <div class="content">
-        <div class="title"><span>About Me</span></div>
-        <div class="about-details">
-          <div class="left">
-            <img src="img.jpg" alt="" />
-            <img src="8.jpg" alt="" />
-            <p>Yeah! I'm a anime fan</p>
-            <img src="11.jpg" alt="" />
-            <img src="bg1.jpg" alt="" />
-          </div>
-          <div class="right">
-            <div class="topic">Hey! I'm a avg CSE student</div>
-            <p>
-                Always motivated to create new ideas with a strong foundation of web application. Interested in Web designing, graphics designing, 3D Model creation and many more things. Adept at designing and implementing scalable, efficient, and user- friendly application.<br><br>Lastly!! you're right~ Seeking for a job and hands on project experience in an industrial or organization career.</p>
-            <div class="button">
-              <button onclick="window.open('RESUME.pdf')">Download Resume</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="skills" id="skills">
-      <div class="content">
-        <div class="title"><span>My Skills</span></div>
-        <div class="skills-details">
-          <div class="text">
-            <div class="topic">Skills and abilities</div>
-            <p> o	Language: HTML, CSS, JAVA Script, Python, C.<br>
-                o	Databases: MySQL, MongoDB.<br>
-                o	Tools: Visual Studio Code, PyCharm, Cisco Packet Tracer.<br>
-                o	Figma, WordPress, Wireframe, Creative UI-UX designing.<br>
-                o	Analytical and problem-solving abilities.<br>
-                o	Effective communication and teamwork.<br>
-            </p>
-          </div>
-          <div class="boxes">
-            <div class="box">
-              <div class="topic">HTML</div>
-              <div class="per">90%</div>
-            </div>
-            <div class="box">
-              <div class="topic">CSS</div>
-              <div class="per">90%</div>
-            </div>
-            <div class="box">
-              <div class="topic">JavScript</div>
-              <div class="per">75%</div>
-            </div>
-            <div class="box">
-              <div class="topic">C</div>
-              <div class="per">85%</div>
-            </div>
-            <div id="p"> 
-            <p>Mosted used languages in my 3 years journey -----> </p><br>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- My Services Section Start --
-    <section class="services" id="services">
-      <div class="content">
-        <div class="title"><span>My Personal Projects</span></div>
-        <div class="boxes">
-          <div class="box">
-            <div class="icon">
-              <i class="fas fa-desktop"></i>
-            </div>
-            <div class="topic">SIQUL: Development of an E-learning website.
-              </div>
-            <p>Led the development of a comprehensive E-learning platform aimed at providing notes of Computer Science and Engineering for users.</p><br>
-            <b><button id="m" onclick="window.location.href='https://srabani-01.github.io/';">Visit</button></b>
-          </div>
-          <div class="box">
-            <div class="icon">
-              <i class="fas fa-paint-brur qt"></i>
-            </div>
-            <div class="topic">UI Design of a restaurant using Figma.</div>
-            <p>This includes the restaurant's website and mobile application, designed to enhance the user experience, facilitate easy navigation, and promote the restaurant's brand identity.</p>
-      </div>
-    </section>  -->
+  </header>
 
-    <!-- Footer Section Start -->
-    <footer>
-      <div class="text">
-        <span>&#169; 2024 Blackmind - All Rights Reserved</span><br>
+  <!-- =========  Hero Section  ========= -->
+  <main id="home" class="hero">
+    <div>
+      <h1>Hi, I’m Srabani Pal 👋</h1>
+      <p>Front‑End Developer & UI/UX enthusiast who loves transforming complex problems into intuitive digital experiences.</p>
+      <a href="#projects" class="btn">View My Work</a>
+    </div>
+  </main>
+
+  <!-- =========  About Section  ========= -->
+  <section id="about">
+    <h2 class="section_title">About Me</h2>
+    <div class="container about_grid">
+      <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=800" alt="Portrait" />
+      <div>
+        <p>I’m a final‑year Computer Science student passionate about web technologies, clean design, and accessible user experiences. Over the last three years I’ve honed my skills in HTML, CSS, JavaScript, and design tools like Figma. I enjoy collaborating, learning new frameworks, and tackling tricky UI challenges.</p>
+        <br/>
+        <a class="btn" href="resume.pdf" download>Download CV</a>
       </div>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+    </div>
+  </section>
+
+  <!-- =========  Projects Section  ========= -->
+  <section id="projects">
+    <h2 class="section_title">Projects</h2>
+    <div class="container projects_grid">
+      <div class="project_card">
+        <img src="https://picsum.photos/seed/edu/600/400" alt="E‑learning platform" />
+        <div class="project_content">
+          <h3 class="project_title">SIQUL – E‑Learning Website</h3>
+          <p class="project_link"><a href="https://srabani-01.github.io/" target="_blank">Visit site ↗︎</a></p>
+        </div>
+      </div>
+      <div class="project_card">
+        <img src="https://picsum.photos/seed/game/600/400" alt="Flappy Bird clone" />
+        <div class="project_content">
+          <h3 class="project_title">Flappy Bird Clone (Unity)</h3>
+          <p class="project_link"><a href="flappygame/index.html" target="_blank">Play now ↗︎</a></p>
+        </div>
+      </div>
+      <div class="project_card">
+        <img src="https://picsum.photos/seed/figma/600/400" alt="Restaurant UI" />
+        <div class="project_content">
+          <h3 class="project_title">Restaurant UI (Figma)</h3>
+          <p class="project_link"><a href="#">View prototype ↗︎</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- =========  Contact Section  ========= -->
+  <section id="contact">
+    <h2 class="section_title">Get in Touch</h2>
+    <div class="container contact_grid">
+      <div class="contact_item"><i class="fas fa-envelope"></i><span>srabani@example.com</span></div>
+      <div class="contact_item"><i class="fab fa-linkedin"></i><span>linkedin.com/in/srabani-pal</span></div>
+      <div class="contact_item"><i class="fab fa-github"></i><span>github.com/Srabani-01</span></div>
+    </div>
+  </section>
+
+  <!-- =========  Footer  ========= -->
+  <footer>
+    © 2025 Srabani Pal — All rights reserved
+  </footer>
+</body>
 </html>
